Make add comment functional

--- a/views/project34/index.ejs
+++ b/views/project34/index.ejs
@@ -51,7 +51,7 @@
       </div>
     </section>
 
-    <div id="movie-list"></div>
+    <section id="movie-list"></section>
     <button id="prev-page">Prev</button>
     <button id="next-page" disabled>Next</button>
 
