Add youlist link to projects

--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -13,6 +13,9 @@
       <section class="projects-section just-in-section">
         <h2>2026:</h2>
         <ul>
+          <li><a href="/youlist">
+              <h3>YouList - Movies</h3>
+            </a></li>
           <li><a href="/project33-3">
             <h3>To Do List</h3>
             </a></li>
