--- a/views/project34/index.ejs
+++ b/views/project34/index.ejs
@@ -5,7 +5,7 @@
         <!-- Hero Section -->
         <section class="hero-section gradient-background rounded-3 pt-4 pb-3 ps-5">
             <h1 class="gradient-text">YouList - Movies (Under Construction)</h1>
-            <p>This will soon be a peer reviewed movies list.</p>
+            <p>This will soon be a fun place to comment on movies.</p>
         </section>
     </main>
 
